daft-derive/tests/fixtures/invalid/struct-unknown-attribute.stderr
error: unknown attribute (supported attributes: leaf, changes)
 --> tests/fixtures/invalid/struct-unknown-attribute.rs:4:8
  |
4 | #[daft(ignore)]
  |        ^^^^^^
